<resources>
    <string name="app_name">WanAndroid</string>
    <string name="app_designed_by">Designed by lizhehan</string>
    <string name="bottom_navigation_home">首页</string>
    <string name="bottom_navigation_tree">体系</string>
    <string name="bottom_navigation_wxarticle">公众号</string>
    <string name="bottom_navigation_project">项目</string>
    <string name="dialog_bottom_sheet_username">点击登录</string>
    <string name="dialog_bottom_sheet_collect">我的收藏夹</string>
    <string name="dialog_bottom_sheet_history">历史记录</string>
    <string name="dialog_bottom_sheet_read_later">稍后阅读</string>
    <string name="dialog_bottom_sheet_about">关于 WanAndroid</string>
    <string name="dialog_bottom_sheet_status">已登录</string>
    <string name="menu_search">搜索</string>
    <string name="menu_user">我</string>
    <string name="menu_hot">热门</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_already_collect">已收藏</string>
    <string name="menu_share">分享</string>
    <string name="menu_open_in_browser">在浏览器中打开</string>
    <string name="menu_copy_link">复制网址</string>
    <string name="menu_open_image">打开图片</string>
    <string name="menu_save_image">保存图片</string>
    <string name="menu_share_image">分享图片</string>
    <string name="copied_link">已复制网址</string>
    <string name="saved_image">已保存图片</string>
    <string name="failed_to_save_image">保存图片失败</string>
    <string name="image_failed_to_load">图片加载出错</string>
    <string name="dialog_request_permissions_title">WanAndroid 需要具备存储空间使用权限才能保存图片</string>
    <string name="dialog_request_permissions_message">图片保存位置&#160;</string>
    <string name="dialog_request_permissions_next">继续</string>
    <string name="no_more">已经到达列表底部</string>
    <string name="data_loading">加载中…</string>
    <string name="data_load_error">页面加载出错</string>
    <string name="connect_to_the_internet">无法连接到互联网</string>
    <string name="tips_connect_to_the_internet">请检查您的网络连接，然后重试。</string>
    <string name="reload_content">重新加载</string>
    <string name="retry">重试</string>
    <string name="tips_exit">再按一次退出 WanAndroid</string>
    <string name="title_activity_login">登录</string>
    <string name="login_user_name_hint">用户名</string>
    <string name="login_user_name_password">密码</string>
    <string name="register_user_name_repassword">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_tips">请使用您的 WanAndroid 帐号</string>
    <string name="register_tips">请输入您的用户名和密码</string>
    <string name="return_login">返回登录</string>
    <string name="to_register">创建帐号</string>
    <string name="error_invalid_name">至少6位字符</string>
    <string name="error_invalid_password">至少6位字符</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_no_name">请输入你的用户名</string>
    <string name="error_no_password">请输入你的密码</string>
    <string name="error_no_same_password">确认密码与密码不一致</string>
    <string name="login_ok">登录成功</string>
    <string name="register_ok">注册成功</string>
    <string name="please_login">请先登录</string>
    <string name="collect_success">已收藏</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_success">已取消收藏</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="undo">撤销</string>
    <string name="open_source_project">开源项目</string>
    <string name="project">项目</string>
    <string name="hot">热门</string>
    <string name="questions_and_answers">问答</string>
    <string name="official_accounts">公众号</string>
    <string name="about_title_wanandroid">玩 Android</string>
    <string name="about_summary_wanandroid">每日推荐优质文章</string>
    <string name="about_title_api">玩 Android 开放 API</string>
    <string name="about_summary_api">一起来做个 App 吧</string>
    <string name="about_title_feedback">发送反馈</string>
    <string name="about_summary_feedback">帮助我改进 WanAndroid 应用</string>
    <string name="about_title_github">开放源代码</string>
    <string name="about_summary_github">前往 GitHub 查看本应用开放源代码</string>
    <string name="about_title_version">应用版本</string>
    <string name="about_title_share">分享应用</string>
    <string name="about_content_share">分享一个好用好看的 WanAndroid App:\nhttps://github.com/lizhehan/WanAndroid</string>

</resources>
