<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:summary="@string/about_summary_wanandroid"
        android:title="@string/about_title_wanandroid">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.wanandroid.com/" />
    </Preference>

    <Preference
        android:summary="@string/about_summary_api"
        android:title="@string/about_title_api">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.wanandroid.com/blog/show/2" />
    </Preference>

    <Preference
        android:summary="@string/about_summary_feedback"
        android:title="@string/about_title_feedback">
        <intent
            android:action="android.intent.action.SENDTO"
            android:data="mailto:zhehan.li97@gmail.com?subject=Feedback: WanAndroid" />
    </Preference>

    <Preference
        android:summary="@string/about_summary_github"
        android:title="@string/about_title_github">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/lizhehan/WanAndroid" />
    </Preference>

    <Preference
        android:key="version"
        android:summary=""
        android:title="@string/about_title_version" />

    <Preference
        android:key="share"
        android:title="@string/about_title_share" />

</PreferenceScreen>