<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/view_account"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/img_account"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_account_circle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/img_account">
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_bottom_sheet_username"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_bottom_sheet_status"
                    android:visibility="gone"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_chevron_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:id="@+id/view_collect"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/image_collect"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                app:srcCompat="@drawable/ic_star_black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@+id/image_collect"
                android:text="@string/dialog_bottom_sheet_collect"
                android:textColor="@color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:id="@+id/view_about"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/img_about"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                app:srcCompat="@drawable/ic_about_black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@+id/img_about"
                android:text="@string/dialog_bottom_sheet_about"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>